--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.nomadworks.spacex.screens.home.HomeFragment"
-        android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_latestLaunchFragment"
@@ -17,6 +16,6 @@
     <fragment
         android:id="@+id/latestLaunchFragment"
         android:name="com.nomadworks.spacex.screens.latestlaunch.LatestLaunchFragment"
-        android:label="latest_launch_fragment"
+        android:label="Latest Launch"
         tools:layout="@layout/fragment_latest_launch" />
 </navigation>
